# canvas-exporter

./: .gitignore  Pipfile  README.md  README.rst  main.py  pyproject.toml
canvas_exporter/: main.py
modules/: auth.py
tests/: test_canvas_exporter.py
