[tool.poetry]
name = "canvas-exporter"
version = "0.1.0"
description = ""
authors = ["Easton Pillay <easton@planeteaston.com>"]

[tool.poetry.dependencies]
python = "^3.8"
canvasapi = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
